--- a/WeChatProjects/miniprogram-test-1/pages/news/news.wxml
+++ b/WeChatProjects/miniprogram-test-1/pages/news/news.wxml
@@ -1,3 +1,5 @@
+<import src="news-template/news-template.wxml"/>
+
 <view class="news-container">
   <swiper indicator-dots='{{indicatordots}}' autoplay='{{autoplay}}' interval='{{interval}}' circular='{{circular}}'>
     <swiper-item>
@@ -17,20 +19,5 @@
 
 
 <block wx:for="{{useData}}" wx:for-item="item" wx:key="key">
-<view class="articlelist">
-  <view class="author-time">
-    <image class="authoricon" src="{{item.authorIcon}}"></image>
-    <text class="author">{{item.authorName}}</text>
-    <text class="time">{{item.authorDate}}</text>
-  </view>
-  <text class="title">{{item.title}}</text>
-  <image class="articleimg" src="{{item.articleImg}}"></image>
-  <text class="article">{{item.articleText}}</text>
-  <view class="article-like">
-    <image class="article-like-icon" src="../news/a.png"></image>
-    <text class="article-like-text">{{item.pl}}</text>
-    <image class="article-like-icon" src="../news/b.png"></image>
-    <text class="article-like-text">{{item.pl}}</text>
-  </view>
-</view>
+  <template is="news-template" data="{{...item}}"/>
 </block>
