--- a/WeChatProjects/miniprogram-test-1/pages/news/news-detail/news-detail.wxss
+++ b/WeChatProjects/miniprogram-test-1/pages/news/news-detail/news-detail.wxss
@@ -1,1 +1,92 @@
-/* pages/news/news-detail/news-detail.wxss */
+.news-detail-container{
+  display:flex;
+  flex-direction: column;
+}
+
+.head-img{
+  width:100%;
+}
+
+.author-time{
+  flex-direction: row;
+  margin-left:30rpx;
+  margin-top: 20rpx;
+}
+
+.author-avatar{
+  height: 64rpx;
+  width: 64rpx;
+  vertical-align: middle;
+}
+
+.author-name{
+  font-size: 30rpx;
+  font-weight: 700;
+  margin-left: 20rpx;
+  vertical-align: middle;
+  color: #666;
+}
+
+.const-text{
+  font-size: 24rpx;
+  color: #999;
+  margin-left: 20rpx;
+}
+
+.time{
+  font-size: 24rpx;
+  margin-left: 30rpx;
+  vertical-align: middle;
+  color: #999;
+}
+
+.title{
+  font-size: 36rpx;
+  font-weight: 700;
+  margin-left: 40rpx;
+  margin-top: 30rpx;
+  letter-spacing: 2px;
+  color: #4b556c;
+}
+
+.tool{
+  margin-top: 20rpx;
+}
+
+.circle-img{
+  float: right;
+  margin-right: 40rpx;
+  vertical-align: middle;
+}
+
+.circle-img image{
+    width: 50rpx;
+    height: 50rpx;
+}
+
+.share-img{
+  margin-left: 30rpx;
+}
+
+/* 横线 */
+.horizon{
+  width: 660rpx;
+    height: 1px;
+    background-color: #e5e5e5;
+    vertical-align: middle;
+    position: relative;
+    top: 46rpx;
+    margin: 0 auto;
+    z-index: -99;
+}
+
+.detail{
+    color:#666;
+    margin-top: 20rpx;
+    margin-right: 30rpx;
+    margin-left: 30rpx;
+    line-height: 44rpx;
+    letter-spacing: 2px;
+    font-size: 24rpx;
+}
+
